[package]
name = "hetero-container"
version = "1.0.0"
authors = ["mirror-kt <me@mirror-kt.dev>"]
edition = "2018"

description = "heterogeneous container implementation for rust."
documentation = "https://docs.rs/hetero-container/"
homepage = "https://crates.io/crates/hetero-container"
repository = "https://github.com/mirror-kt/hetero-container"

readme = "README.md"

keywords = ["hetero-container", "anymap"]
categories = ["development-tools"]
license = "MIT"

[dependencies]
